# puppet-to-ansible

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: cli.py
src/converters/: __init__.py  apt.py  augeas.py  base.py  concat.py  cron.py  exec_res.py  file_res.py  firewall.py  group.py  host.py  ini_setting.py  manifest_converter.py  mount.py  mysql_db.py  notify_res.py  package.py  registry.py  selboolean.py  service.py  ssh_authorized_key.py  sysctl.py  tidy.py  user.py  yumrepo.py
src/generators/: __init__.py  playbook.py
src/parser/: __init__.py  parser.py  preprocessor.py  puppet.lark  transformer.py
src/puppet_to_ansible/: cli.py
src/puppet_to_ansible/converters/: __init__.py  apt.py  augeas.py  base.py  concat.py  cron.py  exec_res.py  file_res.py  firewall.py  group.py  host.py  ini_setting.py  manifest_converter.py  mount.py  mysql_db.py  notify_res.py  package.py  registry.py  selboolean.py  service.py  ssh_authorized_key.py  sysctl.py  tidy.py  user.py  yumrepo.py
src/puppet_to_ansible/generators/: __init__.py  playbook.py
src/puppet_to_ansible/parser/: __init__.py  ast_nodes.py  parser.py  preprocessor.py  transformer.py
src/puppet_to_ansible/puppetfile/: __init__.py  mapper.py  parser.py
src/puppet_to_ansible/reporters/: migration_report.py
src/puppet_to_ansible/templates/: __init__.py  erb_to_jinja.py
src/puppetfile/: __init__.py  mapper.py
src/reporters/: migration_report.py
src/templates/: __init__.py  erb_to_jinja.py  hiera_to_vars.py
src/utils/: facts_mapper.py
tests/: conftest.py  test_integration.py  test_parser.py
tests/test_converters/: test_file.py  test_manifest_converter.py  test_mysql_db.py  test_package.py  test_service.py  test_sysctl.py
tests/test_puppetfile/: test_mapper.py  test_parser.py
(+18 files in other folders)
